Fixed icon alignment, had to add favicons files to jamiepedia because hotlinking didnt work for some sites

--- a/css/social-icons.css
+++ b/css/social-icons.css
@@ -3,7 +3,7 @@
   display: inline-flex;
   align-items: center;
   margin-right: 6px;
-  height: 1em;
+  height: 100%;
   width: 1em;
 }
 
